--- a/React/React/FullStack Course/Part 9 TypeScript/Exercises/9d.md
+++ b/React/React/FullStack Course/Part 9 TypeScript/Exercises/9d.md
@@ -21,3 +21,24 @@ const handleSubmit = (e: SyntheticEvent) => {
 
 The interesting bit is the line where we're asserting the type of the target, this is called [Type Intersection](https://www.typescriptlang.org/docs/handbook/2/objects.html#intersection-types).
 
+After switching to controlled inputs, the creation is pretty simple, the only weird bit is when the request fail, we must define the type of the error, for that we can use the axios function `isAxiosError` :
+
+```ts
+diaryService
+  .createEntry(entryObj)
+  .then((data) => {
+	props.onEntryCreation(data);
+	setDate('');
+	setVisibility('');
+	setWeather('');
+	setComment('');
+  })
+  .catch((error) => {
+	if (axios.isAxiosError(error)) {
+	  setError(error.response?.data);
+	  console.log('Creation error: ', error);
+	}
+  });
+```
+
+The function acts as Type Guard and let TS know that the error is of type `AxiosError` with that we can access its properties in order to display an adequate error message.
